[metadata]
name = np-cache
version = 0.1
author = Rishi Kulkarni
author_email = rishi@kulkarni.science
url = https://github.com/rishi-kulkarni/np-cache
description = Lightweight LRU cache that handles Numpy arrays 
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE.txt
classifiers=
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir=
    =src
packages=find:
install_requires=
    numpy>=1.22.3
    xxhash>=0.8.0
python_requires= >=3.8

[options.packages.find]
where=src
exclude = 
    tests

[flake8]
max-line-length = 88
ignore = E203 W503